Data introducted. Cleanup.

--- a/notebooks/Retrosynthesis.ipynb
+++ b/notebooks/Retrosynthesis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {
     "scrolled": false
    },
@@ -196,13 +196,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "RX01, RX02 are reactants and products respectively."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reactant #1: N-(3,5-dichlorobenzenesulfonyl)-2-(S)-proline\n",
+      "Reactant #2: (R)-3-Amino-3-(2',6'-dimethoxy-biphenyl-4-yl)-propionic acid methyl ester\n",
+      "Product: (R)-3-{[(S)-1-(3,5-Dichloro-benzenesulfonyl)-pyrrolidine-2-carbonyl]-amino}-3-(2',6'-dimethoxy-biphenyl-4-yl)-propionic acid methyl ester\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Reactant #1:\", rx[1].getchildren()[1].text)\n",
+    "print(\"Reactant #2:\", rx[2].getchildren()[1].text)\n",
+    "print(\"Product:\", rx[3].getchildren()[1].text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are RX03 and RX04?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<RX03>\n",
+      "          <RX.BCODE>261039242542204</RX.BCODE>\n",
+      "          <RX.MCODE>325399193666863</RX.MCODE>\n",
+      "          <RX.NCODE>343559256484622</RX.NCODE>\n",
+      "        </RX03>\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ElementTree.tostring(rx[11]).decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<RX04>\n",
+      "          <RX.TRANS highlight=\"true\"><hi>0/80F51(0205)|80F42(030406)|40F61()|01E62()|01E41(0809)|01E41(070A)|01D51(0B0F)|01D45(0C0D)|01D41(0E)|01D41(10)|01CD3(111215)|01C45(16)|01C45(17)|01C42(1314)|01C41(10)|01C41()|01B62()|01B62()|01B62()|01B61(1B)|01B45(191A)|01B45(18)|01B45(18)|01A45(1C)|01A45(1D)|01A45(1E)|01A41()|01945(2122)|01945(1F23)|01945(2023)|018E1()|018E1()|01845(2426)|01845(2527)|01845()|01761(29)|01761(2A)|01745(28)|01745(28)|01645()|01641()|01641()|</hi></RX.TRANS>\n",
+      "          <RX.BIN>283019</RX.BIN>\n",
+      "          <RX.BFREQ>76</RX.BFREQ>\n",
+      "          <RX.BRANGE>282515-283231</RX.BRANGE>\n",
+      "          <RX.BNAME>NH2 + -(C=)-O- to -NH-C(=)-</RX.BNAME>\n",
+      "          <RX.QRY0>0/80F51(02*)|80F42(03*)|40F61()|*</RX.QRY0>\n",
+      "          <RX.QRY1>0/80F51(02*)|80F42(03*)|40F61()|01E62(*)|01E41(*)|01E41(*)|*</RX.QRY1>\n",
+      "          <RX.QRY2>0/80F51(0205)|80F42(030406)|40F61()|01E62(*)|01E41(*)|01E41(*)|*</RX.QRY2>\n",
+      "          <RX.QRY3>0/80F51(0205)|80F42(030406)|40F61()|01E62(*)|01E41(*)|01E41(*)|01D51(*)|01D45(*)|01D41(*)|01D41(*)|*</RX.QRY3>\n",
+      "          <RX.QRY4>0/80F51(0205)|80F42(030406)|40F61()|01E62(*)|01E41(0809*)|01E41(070A*)|01D51(*)|01D45(*)|01D41(*)|01D41(*)|*</RX.QRY4>\n",
+      "          <RX.QRY5>0/80F51(0205)|80F42(030406)|40F61()|01E62(*)|01E41(0809*)|01E41(070A*)|01D51(*)|01D45(*)|01D41(*)|01D41(*)|01CD3(*)|01C45(*)|01C45(*)|01C42(*)|01C41(*)|01C41(*)|*</RX.QRY5>\n",
+      "        </RX04>\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ElementTree.tostring(rx[12]).decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "RXNFILE is potentially interesting. What is .rxn?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -430,6 +526,46 @@
    ],
    "source": [
     "!cat ../data/example.rxn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'full reaction'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[c for c in rx.getchildren() if c.tag == \"RX.RTYP\"][0].text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'has preparation'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[c for c in rx.getchildren() if c.tag == \"RX.RTYP\"][1].text"
    ]
   },
   {
