--- a/notebooks/Retrosynthesis.ipynb
+++ b/notebooks/Retrosynthesis.ipynb
@@ -768,7 +768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a look to molecules, what they are, how they react."
+    "Let's take a look at the molecules, what they are, how they react."
    ]
   },
   {
@@ -875,7 +875,7 @@
    "metadata": {},
    "source": [
     "### 2.4. Prettify\n",
-    "Let's fix several drawing parameteres so as to get prettier pictures."
+    "Let's fix several drawing parameteres to get prettier pictures."
    ]
   },
   {
@@ -1161,8 +1161,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What we can say about the reaction? If I were an experienced chemist, I wouldn't have problems with determining atoms which changed their properties and those that stayed intact. However, I am not and that case is not a simple one, is it?  \n",
-    "The problem is even worse if you are going to desribe it to computer. You need to find common fuzzy substrctures between reactants and products. This fuzziness is hard to implement and in many cases will lead to incorrect reaction core. How could we address the problem?"
+    "What can we say about the reaction? If I were an experienced chemist, I wouldn't have problems with determining atoms which changed their properties and those that stayed intact. However, I am not and this case is not a simple one, is it?  \n",
+    "The problem is even worse if you are going to desribe it to computer. You need to find common fuzzy substructures between reactants and products. This fuzziness is hard to implement and in many cases will lead to incorrect reaction core. How could we address the problem?"
    ]
   },
   {
@@ -1183,7 +1183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reaction core is crucial for solving chemoinformatics tasks as it introduce knowledge of which atoms were changed during reactions and which ones provide required environment. There are several possible ways to define reaction core, but all of them rely on notion of atom mapping.  \n",
+    "Reaction core is crucial for solving chemoinformatics tasks as it allows us to know which atoms were changed during reactions and which ones provided required environment. There are several possible ways to define reaction core, but all of them rely on notion of atom mapping.  \n",
     "What is AM?  \n",
     "Suppose one of the previous reactions looked like:"
    ]
@@ -1273,7 +1273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What have been changed? Now every atom has its own number and these numbers correspond between reactants and products. It is very useful, because now we know exactly that oxygen atom from the first reactant persisted and the one from the second reactant disappeared."
+    "What changed? Now every atom has its own number and these numbers show the correspondence between reactants and products. It is very useful, because now we know exactly that oxygen atom from the first reactant persisted and the one from the second reactant disappeared."
    ]
   },
   {
@@ -1287,7 +1287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3. Highligh changes atoms"
+    "### 4.3. Highligh changed atoms"
    ]
   },
   {
@@ -1900,7 +1900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks great, now we know what exactly is going on. However, where to get these pretty numbers?"
+    "Looks great, now we know what exactly is going on. However, where should we get these pretty numbers?"
    ]
   },
   {
@@ -2126,14 +2126,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can find here information about three molecules: two of them are reactants and the last one is product. The first block of molecule decription is about atoms: symbols (S, N, C, O, ...), coordinates and auxiliary info. The second block is about chemical bonds. We are interested in the first four columns: bond_index, first_atom, second_atom, bond_order."
+    "We can find here information about three molecules: two of them are reactants and the last one is product. The first block of the molecule description is about atoms: symbols (S, N, C, O, ...), coordinates and auxiliary info. The second block is about chemical bonds. We are interested in the first four columns: bond_index, first_atom, second_atom, bond_order."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pay attentions to the 14th column: these numbers probably represent atom mapping we are trying to find! So let's build an example reaction and see whether that is the case."
+    "Pay attention to the 14th column: these numbers probably represent atom mapping we are trying to find! So let's build an example reaction and see whether that is the case."
    ]
   },
   {
@@ -2297,7 +2297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Reaction core groupping."
+    "# 6. Reaction core grouping."
    ]
   },
   {
@@ -2427,7 +2427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are many problems with reaction cores, e.g. excess/missing hydrogens, incorrect work with aromaticity, converting reaction core to string and missing atom classes."
+    "There are lots of problems with reaction cores, e.g. excess/missing hydrogens, incorrect work with aromaticity, converting reaction core to string and missing atom classes."
    ]
   },
   {
@@ -2894,7 +2894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's drop atom classes so as to group by reaction type"
+    "Let's drop atom classes to perform grouping by reaction type"
    ]
   },
   {
@@ -4555,9 +4555,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4569,7 +4569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
